--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -401,6 +401,49 @@
   position: relative;
 }
 
+#filtersButton {
+  display: flex;
+  align-items: center;
+  padding: 0 12px;
+  font-size: 14px;
+  width: 100%;
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  background-color: var(--card-bg);
+  color: var(--text);
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+#filtersButton.open {
+  border-radius: 6px 6px 0 0;
+}
+
+#filtersOptions {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: -2px;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 0 0 6px 6px;
+  font-size: 14px;
+  z-index: 200;
+  overflow: hidden;
+}
+
+#filtersOptions .option {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+#filtersOptions .option:hover {
+  background: var(--accent-dim);
+  color: black;
+}
+
 #sortSelected,
 #sortOptions,
 #filtersButton,
