--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -159,7 +159,7 @@
 .inline-group {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 8px;
   justify-content: center;
   margin-top: 8px;
 }
@@ -386,7 +386,7 @@
 .custom-dropdown {
   position: relative;
   width: max-content;
-  height: 40px;
+  height: 36px;
   display: flex;
   flex-shrink: 0;
 }
@@ -458,6 +458,22 @@
   height: 36px;
   display: flex;
   flex-shrink: 0;
+}
+
+#sortSelected,
+#filtersButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 12px;
+  font-size: 14px;
+  height: 36px;     
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  background-color: var(--card-bg);
+  color: var(--text);
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 #sortSelected {
