--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -623,19 +623,6 @@
     </details>
   </div>
 
-<div class="controls">
-  <div class="search-line">
-    <input type="text" id="searchBox" placeholder="Search..." />
-    <div class="custom-dropdown">
-      <div id="dropdownSelected">Item Name</div>
-      <div id="dropdownOptions">
-        <div class="option" data-value="name">Item Name</div>
-        <div class="option" data-value="book">Plan Name</div>
-        <div class="option" data-value="entm">Entitlement Name</div>
-      </div>
-    </div>
-  </div>
-
 <div class="inline-group">
   <!-- Filters group -->
   <div class="group-filters">
@@ -646,6 +633,23 @@
       </div>
     </div>
   </div>
+
+  <!-- Sort group -->
+  <div class="group-sort">
+    <label for="sortMode">Sort By:</label>
+    <div class="custom-dropdown" id="sortDropdown">
+      <div id="sortSelected">Workshop Menu ▼</div>
+      <div id="sortOptions">
+        <div class="option" data-value="camp-top">Workshop Menu ▼</div>
+        <div class="option" data-value="camp-bottom">Workshop Menu ▲</div>
+        <div class="option" data-value="az">Alphabetical ▼</div>
+        <div class="option" data-value="za">Alphabetical ▲</div>
+        <div class="option" data-value="old-new">Oldest</div>
+        <div class="option" data-value="new-old">Newest</div>
+      </div>
+    </div>
+  </div>
+</div>
 
   <!-- Sort group -->
   <div class="group-sort">
