--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -151,7 +151,7 @@
   .controls .inline-group {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 8px;
     justify-content: center;
     margin-top: 8px;
   }
@@ -164,6 +164,7 @@
   margin-top: 8px;
 }
 
+
 .inline-group label {
   font-size: 14px;
   color: var(--text-muted);
@@ -171,6 +172,7 @@
 
 .group-filters {
   display: flex;
+  margin-right: 24px
   flex-shrink: 0;
 }
 
@@ -429,8 +431,8 @@
 }
 
 #filtersButton .filter-icon {
-  width: 16px;  
-  height: 16px;
+  width: 20px;  
+  height: 20px;
   flex-shrink: 0;
   stroke: var(--accent); 
 }
@@ -652,28 +654,27 @@
     <div class="custom-dropdown" id="filtersDropdown">
       <div id="filtersButton">
         Filters
-        <!-- Funnel icon -->
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
         </svg>
       </div>
-      <div id="filtersOptions">
-        <!-- Options can go here later -->
-      </div>
+      <div id="filtersOptions"></div>
     </div>
   </div>
 
   <!-- Sort group -->
-  <label for="sortMode">Sort By:</label>
-  <div class="custom-dropdown" id="sortDropdown">
-    <div id="sortSelected">Workshop Menu ▼</div>
-    <div id="sortOptions">
-      <div class="option" data-value="camp-top">Workshop Menu ▼</div>
-      <div class="option" data-value="camp-bottom">Workshop Menu ▲</div>
-      <div class="option" data-value="az">Alphabetical ▼</div>
-      <div class="option" data-value="za">Alphabetical ▲</div>
-      <div class="option" data-value="old-new">Oldest</div>
-      <div class="option" data-value="new-old">Newest</div>
+  <div class="group-sort">
+    <label for="sortMode">Sort By:</label>
+    <div class="custom-dropdown" id="sortDropdown">
+      <div id="sortSelected">Workshop Menu ▼</div>
+      <div id="sortOptions">
+        <div class="option" data-value="camp-top">Workshop Menu ▼</div>
+        <div class="option" data-value="camp-bottom">Workshop Menu ▲</div>
+        <div class="option" data-value="az">Alphabetical ▼</div>
+        <div class="option" data-value="za">Alphabetical ▲</div>
+        <div class="option" data-value="old-new">Oldest</div>
+        <div class="option" data-value="new-old">Newest</div>
+      </div>
     </div>
   </div>
 </div>
