--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -428,12 +428,15 @@
   color: var(--text);
   cursor: pointer;
   box-sizing: border-box;
+  height: 36px;
 }
 
 #filtersButton .filter-icon {
-  width: 20px;  
-  height: 20px;
+  width: 25px;  
+  height: 25px;
   flex-shrink: 0;
+  margin-left: 6px;
+  vertical-align: middle;
   stroke: var(--accent); 
 }
 
