--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -409,6 +409,13 @@
   box-sizing: border-box;
 }
 
+.group-filters,
+.group-sort {
+  display: flex;
+  align-items: center; 
+}
+
+
 #filtersDropdown {
   width: 120px;   
   position: relative;
@@ -435,7 +442,6 @@
   width: 25px;  
   height: 25px;
   flex-shrink: 0;
-  margin-left: 6px;
   vertical-align: middle;
 }
 
