--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -409,12 +409,10 @@
   box-sizing: border-box;
 }
 
-.group-filters,
-.group-sort {
-  display: flex;
-  align-items: center; 
+#filtersDropdown, #sortDropdown {
+  margin: 0;
+  padding: 0;
 }
-
 
 #filtersDropdown {
   width: 120px;   
