--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -409,6 +409,34 @@
   box-sizing: border-box;
 }
 
+#filtersButton,
+#sortSelected {
+  height: 36px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px; /* keeps space between text and icon if any */
+  padding: 0 12px;
+  font-size: 14px;
+  line-height: 1;
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  background-color: var(--card-bg);
+  color: var(--text);
+  cursor: pointer;
+  box-sizing: border-box;
+  vertical-align: middle;
+}
+
+#filtersDropdown,
+#sortDropdown {
+  display: inline-flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+
 #filtersDropdown, #sortDropdown {
   margin: 0;
   padding: 0;
