--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -487,6 +487,8 @@
   border: 2px solid var(--accent);
   border-radius: 0 0 6px 6px;
   font-size: 14px;
+  display: grid; 
+  grid-template-columns: 1fr 1fr;
   z-index: 200;
   overflow: hidden;
 }
@@ -517,6 +519,7 @@
 
 .filter-columns {
   display: grid;
+  flex-direction: column;
   grid-template-columns: 1fr 1fr;
   gap: 8px;
 }
