--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -476,7 +476,7 @@
   border-radius: 6px 6px 0 0;
 }
 
-#filtersOptions {
+#filterOptions {
   display: none;
   position: absolute;
   top: 100%;
@@ -493,17 +493,17 @@
   overflow: hidden;
 }
 
-#filtersOptions .option {
+#filterOptions .option {
   padding: 8px 12px;
   cursor: pointer;
 }
 
-#filtersOptions .option:hover {
+#filterOptions .option:hover {
   background: var(--accent-dim);
   color: black;
 }
 
-#filtersOptions {
+#filterOptions {
   display: none; 
   position: absolute;
   top: 100%;
@@ -533,7 +533,7 @@
   font-size: 14px;
 }
 
-#filtersOptions button {
+#filterOptions button {
   background: var(--card-bg);
   border: 2px solid var(--accent);
   border-radius: 6px;
@@ -544,12 +544,12 @@
   transition: background 0.2s, color 0.2s;
 }
 
-#filtersOptions button:hover {
+#filterOptions button:hover {
   background: var(--accent-dim);
   color: black;
 }
 
-#filtersOptions button.active {
+#filterOptions button.active {
   background: var(--accent);
   color: black;
   font-weight: bold;
@@ -576,7 +576,7 @@
 #sortSelected,
 #sortOptions,
 #filtersButton,
-#filtersOptions {
+#filterOptions {
   width: 100%;
   box-sizing: border-box;
 }
