--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -471,12 +471,36 @@
   vertical-align: middle;
 }
 
+.filter-columns {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.filter-header {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+#filtersOptions button[data-filter] {
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+#filtersOptions button[data-filter].selected {
+  background-color: #4f46e5;
+  color: white;
+  border-color: #4f46e5;
+}
 
 #filtersButton.open {
   border-radius: 6px 6px 0 0;
 }
 
-#filterOptions {
+#filtersOptions {
   display: none;
   position: absolute;
   top: 100%;
@@ -487,96 +511,34 @@
   border: 2px solid var(--accent);
   border-radius: 0 0 6px 6px;
   font-size: 14px;
-  display: grid; 
-  grid-template-columns: 1fr 1fr;
   z-index: 200;
   overflow: hidden;
 }
 
-#filterOptions .option {
+#filtersOptions .option {
   padding: 8px 12px;
   cursor: pointer;
 }
 
-#filterOptions .option:hover {
+#filtersOptions .option:hover {
   background: var(--accent-dim);
   color: black;
-}
-
-#filterOptions {
-  display: none; 
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 300px; /* wider than the button */
-  background-color: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 0 0 6px 6px;
-  padding: 8px;
-  z-index: 200;
-  box-sizing: border-box;
-}
-
-.filter-columns {
-  display: grid;
-  flex-direction: column;
-  grid-template-columns: 1fr 1fr;
-  gap: 8px;
-}
-
-.filter-header {
-  grid-column: span 2;
-  font-weight: bold;
-  color: var(--accent);
-  text-align: center;
-  margin: 6px 0;
-  font-size: 14px;
-}
-
-#filterOptions button {
-  background: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  padding: 6px;
-  font-size: 14px;
-  color: var(--text);
-  cursor: pointer;
-  transition: background 0.2s, color 0.2s;
-}
-
-#filterOptions button:hover {
-  background: var(--accent-dim);
-  color: black;
-}
-
-#filterOptions button.active {
-  background: var(--accent);
-  color: black;
-  font-weight: bold;
 }
 
 .clear-filters {
-  grid-column: span 2;
-  margin-top: 10px;
-  padding: 6px;
-  text-align: center;
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  background: var(--accent-dim);
-  color: black;
+  margin-top: 8px;
+  background-color: #ffeded;
+  border: 1px solid #ff4d4f;
+  color: #ff4d4f;
+  border-radius: 4px;
+  padding: 4px 8px;
   cursor: pointer;
-  transition: background 0.2s;
 }
-
-.clear-filters:hover {
-  background: var(--accent);
-}
-
 
 #sortSelected,
 #sortOptions,
 #filtersButton,
-#filterOptions {
+#filtersOptions {
   width: 100%;
   box-sizing: border-box;
 }
@@ -755,25 +717,22 @@
   </div>
 
 <div class="inline-group">
-  <!-- Filter Dropdown -->
-  <div class="dropdown filterDropdown">
-    <button id="filterSelected">
-      Filters
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2l-7 8v5l-4 2v-7L3 6V4z" />
-      </svg>
-    </button>
+  <!-- Filters group -->
+  <div class="group-filters">
+    <div class="custom-dropdown" id="filtersDropdown">
+      <div id="filtersButton">
+        Filters
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+        </svg>
+      </div>
 
-    <div id="filterOptions" class="dropdown-options">
-      <div class="filter-columns">
-        <div class="filter-column">
+      <div id="filtersOptions">
+        <div class="filter-columns">
           <div class="filter-header">Placement Condition</div>
           <button data-filter="plan">Plan</button>
-          <button data-filter="entm">Entitlement</button>
-        </div>
+          <button data-filter="entitlement">Entitlement</button>
 
-        <div class="filter-column">
           <div class="filter-header">Workshop Category</div>
           <button data-filter="camp">C.A.M.P. Pieces</button>
           <button data-filter="decor">Decorations</button>
@@ -787,30 +746,31 @@
           <button data-filter="storage">Storage</button>
           <button data-filter="structure">Structure</button>
           <button data-filter="utility">Utility</button>
-          <button data-filter="wall">Wall Decor</button>
-          <button data-filter="wallpaper">Wallpapers</button>
+          <button data-filter="walldecor">Wall Decor</button>
+          <button data-filter="wallpapers">Wallpapers</button>
+
+          <button class="clear-filters">Clear All</button>
         </div>
+      </div> 
+    </div> 
+  </div> 
+
+  <!-- Sort group -->
+  <div class="group-sort">
+    <label for="sortMode">Sort By:</label>
+    <div class="custom-dropdown" id="sortDropdown">
+      <div id="sortSelected">Workshop Menu ▼</div>
+      <div id="sortOptions">
+        <div class="option" data-value="camp-top">Workshop Menu ▼</div>
+        <div class="option" data-value="camp-bottom">Workshop Menu ▲</div>
+        <div class="option" data-value="az">Alphabetical ▼</div>
+        <div class="option" data-value="za">Alphabetical ▲</div>
+        <div class="option" data-value="old-new">Oldest</div>
+        <div class="option" data-value="new-old">Newest</div>
       </div>
-
-      <button id="clearFilters">Clear All</button>
-    </div>
-  </div>
-
-  <!-- Sort Group -->
-  <label for="sortMode">Sort By:</label>
-  <div class="custom-dropdown" id="sortDropdown">
-    <div id="sortSelected">Workshop Menu ▼</div>
-    <div id="sortOptions">
-      <div class="option" data-value="camp-top">Workshop Menu ▼</div>
-      <div class="option" data-value="camp-bottom">Workshop Menu ▲</div>
-      <div class="option" data-value="az">Alphabetical ▼</div>
-      <div class="option" data-value="za">Alphabetical ▲</div>
-      <div class="option" data-value="old-new">Oldest</div>
-      <div class="option" data-value="new-old">Newest</div>
     </div>
   </div>
 </div>
-
 
 
 
@@ -891,59 +851,40 @@ sortOptions.querySelectorAll('.option').forEach(option => {
   });
 });
 
-const filterBtn = document.getElementById("filterSelected");
-const filterOptions = document.getElementById("filterOptions");
-const filterButtons = filterOptions.querySelectorAll("button[data-filter]");
-const clearFiltersBtn = document.getElementById("clearFilters");
+const filtersButton = document.getElementById('filtersButton');
+const filtersOptions = document.getElementById('filtersOptions');
+const clearFiltersBtn = document.querySelector('.clear-filters');
 
-filterBtn.addEventListener("click", (e) => {
+// 1. Toggle dropdown on button click
+filtersButton.addEventListener('click', (e) => {
+  e.stopPropagation(); // prevent document click from closing it
+  const isOpen = filtersOptions.style.display === 'block';
+  filtersOptions.style.display = isOpen ? 'none' : 'block';
+});
+
+// 2. Stop clicks inside the dropdown from closing it
+filtersOptions.addEventListener('click', (e) => {
   e.stopPropagation();
-  filterOptions.style.display =
-    filterOptions.style.display === "block" ? "none" : "block";
 });
 
-document.addEventListener("click", (e) => {
-  if (!filterOptions.contains(e.target)) {
-    filterOptions.style.display = "none";
-  }
+// 3. Close dropdown if clicking outside
+document.addEventListener('click', () => {
+  filtersOptions.style.display = 'none';
 });
 
-filterButtons.forEach((btn) => {
-  btn.addEventListener("click", () => {
-    btn.classList.toggle("active");
-    applyFilters();
-  });
+// 4. Clear filters button functionality
+clearFiltersBtn.addEventListener('click', () => {
+  const selectedButtons = filtersOptions.querySelectorAll('button.selected');
+  selectedButtons.forEach(btn => btn.classList.remove('selected'));
 });
 
-clearFiltersBtn.addEventListener("click", () => {
-  filterButtons.forEach((b) => b.classList.remove("active"));
-  applyFilters();
+// 5. Toggle visual feedback on filter buttons
+filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
+  btn.addEventListener('click', () => btn.classList.toggle('selected'));
 });
 
-function applyFilters() {
-  const activeFilters = [...filterButtons]
-    .filter((b) => b.classList.contains("active"))
-    .map((b) => b.dataset.filter);
 
-  if (activeFilters.length === 0) {
-    showAllItems();
-    return;
-  }
-
-  // Example filter logic: adjust this to your data
-  document.querySelectorAll(".item").forEach((item) => {
-    const tags = item.dataset.tags?.split(",") || [];
-    item.style.display = activeFilters.some((f) => tags.includes(f))
-      ? "block"
-      : "none";
-  });
-}
-
-function showAllItems() {
-  document.querySelectorAll(".item").forEach((item) => {
-    item.style.display = "block";
-  });
-}
+});
 
 
       let currentPage = 1;
