--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -477,9 +477,21 @@
   gap: 8px;
 }
 
+.filter-columns > div {
+  flex: 1;
+}
+
 .filter-header {
   font-weight: bold;
   margin-bottom: 4px;
+}
+
+#filtersOptions button {
+  padding: 6px 10px;
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+  background: var(--card-bg);
+  cursor: pointer;
 }
 
 #filtersOptions button[data-filter] {
@@ -494,6 +506,11 @@
   background-color: #4f46e5;
   color: white;
   border-color: #4f46e5;
+}
+
+.filter-header {
+  font-weight: bold;
+  margin-bottom: 4px;
 }
 
 #filtersButton.open {
@@ -719,40 +736,45 @@
 <div class="inline-group">
   <!-- Filters group -->
   <div class="group-filters">
-    <div class="custom-dropdown" id="filtersDropdown">
-      <div id="filtersButton">
-        Filters
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
-        </svg>
-      </div>
+  <div class="custom-dropdown" id="filtersDropdown">
+  <div id="filtersButton">
+    Filters
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+    </svg>
+  </div>
 
-      <div id="filtersOptions">
-        <div class="filter-columns">
-          <div class="filter-header">Placement Condition</div>
-          <button data-filter="plan">Plan</button>
-          <button data-filter="entitlement">Entitlement</button>
+  <div id="filtersOptions">
+    <div class="filter-columns">
+      <div class="filter-header">Placement Condition</div>
+      <button data-filter="plan">Plan</button>
+      <button data-filter="entitlement">Entitlement</button>
+    </div>
 
-          <div class="filter-header">Workshop Category</div>
-          <button data-filter="camp">C.A.M.P. Pieces</button>
-          <button data-filter="decor">Decorations</button>
-          <button data-filter="defense">Defense</button>
-          <button data-filter="dwellers">Dwellers</button>
-          <button data-filter="furniture">Furniture</button>
-          <button data-filter="lights">Lights</button>
-          <button data-filter="power">Power</button>
-          <button data-filter="quest">Quest</button>
-          <button data-filter="resource">Resource</button>
-          <button data-filter="storage">Storage</button>
-          <button data-filter="structure">Structure</button>
-          <button data-filter="utility">Utility</button>
-          <button data-filter="walldecor">Wall Decor</button>
-          <button data-filter="wallpapers">Wallpapers</button>
-
-          <button class="clear-filters">Clear All</button>
-        </div>
-      </div> 
-    </div> 
+    <div class="filter-columns">
+      <div class="filter-header">Workshop Category</div>
+      <button data-filter="camp">C.A.M.P. Pieces</button>
+      <button data-filter="decor">Decorations</button>
+      <button data-filter="defense">Defense</button>
+      <button data-filter="dwellers">Dwellers</button>
+      <button data-filter="furniture">Furniture</button>
+      <button data-filter="lights">Lights</button>
+      <button data-filter="power">Power</button>
+      <button data-filter="quest">Quest</button>
+      <button data-filter="resource">Resource</button>
+      <button data-filter="storage">Storage</button>
+      <button data-filter="structure">Structure</button>
+      <button data-filter="utility">Utility</button>
+      <button data-filter="walldecor">Wall Decor</button>
+      <button data-filter="wallpapers">Wallpapers</button>
+    </div>
+    
+    <!-- Clear All button spanning both columns -->
+    <div style="flex-basis: 100%; text-align: center; margin-top: 8px;">
+      <button class="clear-filters">Clear All</button>
+    </div>
+  </div>
+</div>
   </div> 
 
   <!-- Sort group -->
@@ -791,6 +813,7 @@ const sortOptions = document.getElementById('sortOptions');
 let currentSort = 'camp-top';
 
 const dropdownSelected = document.getElementById('dropdownSelected');
+dropdownSelected.textContent = 'Search By: Item Name';
 const dropdownOptions = document.getElementById('dropdownOptions');
 let currentSearchBy = 'name';
 
