--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -939,6 +939,8 @@ function closeAllDropdowns() {
   dropdownSelected.classList.remove('open');
   sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
+  filtersOptions.style.display = 'none';
+  filtersButton.classList.remove('open')
 }
 
 dropdownSelected.addEventListener('click', e => {
