--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -473,17 +473,21 @@
 
 .filter-columns {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  flex-direction: row;  
+  gap: 12px;
 }
 
 .filter-columns > div {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 .filter-header {
   font-weight: bold;
   margin-bottom: 4px;
+  color: var(--accent);
 }
 
 #filtersOptions button {
@@ -495,17 +499,20 @@
 }
 
 #filtersOptions button[data-filter] {
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
+  background-color: var(--card-bg);
+  border: 1px solid var(--accent);
   border-radius: 4px;
-  padding: 4px 8px;
+  color: var(--text);
+  padding: 6px 10px;
   cursor: pointer;
+  transition: background 0.2s, color 0.2s;
+  text-align: left;
 }
 
 #filtersOptions button[data-filter].selected {
-  background-color: #4f46e5;
-  color: white;
-  border-color: #4f46e5;
+  background-color: var(--accent);
+  color: black;
+  border-color: var(--accent);
 }
 
 .filter-header {
@@ -530,6 +537,7 @@
   font-size: 14px;
   z-index: 200;
   overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.5);
 }
 
 #filtersOptions .option {
@@ -544,12 +552,13 @@
 
 .clear-filters {
   margin-top: 8px;
-  background-color: #ffeded;
+  background-color: #3a1a1a;
   border: 1px solid #ff4d4f;
   color: #ff4d4f;
   border-radius: 4px;
-  padding: 4px 8px;
+  padding: 6px 10px;
   cursor: pointer;
+  transition: background 0.2s;
 }
 
 #sortSelected,
