--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -500,13 +500,14 @@
 
 #filtersOptions button[data-filter] {
   background-color: var(--card-bg);
-  border: 1px solid var(--accent);
-  border-radius: 4px;
-  color: var(--text);
+  color: var(--accent);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
   padding: 6px 10px;
   cursor: pointer;
-  transition: background 0.2s, color 0.2s;
-  text-align: left;
+  font-size: 14px;
+  text-align: center;
+  transition: 0.2s;
 }
 
 #filtersOptions button[data-filter].selected {
@@ -529,15 +530,19 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 160px;
+  width: 180px; 
   margin-top: -2px;
-  background-color: var(--card-bg);
+  background-color: var(--card-bg); 
   border: 2px solid var(--accent);
   border-radius: 0 0 6px 6px;
   font-size: 14px;
   z-index: 200;
-  overflow: hidden;
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+  padding: 12px;
+  box-sizing: border-box;
+  display: grid; 
+  grid-template-columns: 1fr 1fr; 
+  gap: 8px 12px; 
 }
 
 #filtersOptions .option {
