--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -499,14 +499,15 @@
 }
 
 #filtersOptions button[data-filter] {
+  width: 100%; 
   background-color: var(--card-bg);
   color: var(--accent);
   border: 2px solid var(--accent);
   border-radius: 6px;
   padding: 6px 10px;
   cursor: pointer;
-  font-size: 14px;
   text-align: center;
+  font-size: 14px;
   transition: 0.2s;
 }
 
@@ -530,9 +531,9 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 180px; 
+  width: 240px; 
   margin-top: -2px;
-  background-color: var(--card-bg); 
+  background-color: var(--card-bg);
   border: 2px solid var(--accent);
   border-radius: 0 0 6px 6px;
   font-size: 14px;
@@ -540,9 +541,11 @@
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
   padding: 12px;
   box-sizing: border-box;
-  display: grid; 
-  grid-template-columns: 1fr 1fr; 
-  gap: 8px 12px; 
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  column-gap: 12px; 
+  row-gap: 8px; 
 }
 
 #filtersOptions .option {
@@ -623,6 +626,13 @@
 #sortOptions .option:hover {
   background: var(--accent-dim);
   color: black;
+}
+
+ @media (max-width: 500px) {
+  #filtersOptions {
+    grid-template-columns: 1fr; /* switch to single column */
+    width: 100%; /* fill parent width */
+  }
 }
 
 
