--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -530,7 +530,8 @@
   display: none;
   position: absolute;
   top: 100%;
-  left: 0;
+  left: 50px;
+  right: 50px;
   width: 240px; 
   margin-top: -2px;
   background-color: var(--card-bg);
@@ -540,12 +541,7 @@
   z-index: 200;
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
   padding: 12px;
-  box-sizing: border-box;
-
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  column-gap: 12px; 
-  row-gap: 8px; 
+  box-sizing: border-box; 
 }
 
 #filtersOptions .option {
