--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -403,6 +403,27 @@ details summary {
   position: relative;
 }
 
+#filtersButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-size: 14px;
+  width: 100%;
+  height: 36px;
+  padding: 0 12px;
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  background-color: var(--card-bg);
+  color: var(--text);
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+#filtersButton.open {
+  border-radius: 6px 6px 0 0;
+}
+
 #filtersButton .filter-icon {
   width: 20px;  
   height: 20px;
@@ -430,45 +451,43 @@ details summary {
 }
 
 #filtersOptions {
-  display: grid; /* open by default for testing */
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 12px;
-  row-gap: 8px;
-
+  display: none; 
   position: absolute;
   top: 100%;
-  left: -60px; /* wider than parent */
-  width: 240px;
-
+  left: -60px; 
+  width: 240px; /* total width */
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
   border-radius: 0 0 6px 6px;
   padding: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+  box-sizing: border-box;
   z-index: 200;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 12px;
+  row-gap: 8px;
 }
 
 #filtersOptions button[data-filter] {
+  display: block;
   width: 100%;
-  background-color: var(--card-bg);
-  color: var(--accent);
+  padding: 6px 10px;
+  font-size: 14px;
   border: 2px solid var(--accent);
   border-radius: 6px;
-  padding: 6px 10px;
-  cursor: pointer;
+  background-color: var(--card-bg);
+  color: var(--accent);
   text-align: center;
-  font-size: 14px;
+  cursor: pointer;
   transition: 0.2s;
 }
 
 #filtersOptions button[data-filter].selected {
   background-color: var(--accent);
   color: black;
-}
-
-#filtersOptions .option:hover {
-  background: var(--accent-dim);
-  color: black;
+  border-color: var(--accent);
 }
 
 .clear-filters {
@@ -538,12 +557,11 @@ details summary {
   color: black;
 }
 
-/* Responsive for mobile */
 @media (max-width: 500px) {
   #filtersOptions {
     grid-template-columns: 1fr;
-    width: 100%;
-    left: 0; /* align with button on small screens */
+    width: 100%; /* fills parent width */
+    left: 0; /* align with button */
   }
 }
 
