--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -495,17 +495,21 @@
 }
 
 #filtersOptions button[data-filter] {
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 4px 8px;
+  background-color: var(--card-bg);      
+  border: 2px solid var(--accent);       
+  border-radius: 6px;
+  padding: 6px 10px;
+  color: var(--accent);                  
   cursor: pointer;
+  text-align: center;
+  font-size: 14px;
+  transition: 0.2s;
 }
 
 #filtersOptions button[data-filter].selected {
-  background-color: #4f46e5;
-  color: white;
-  border-color: #4f46e5;
+  background-color: var(--accent);       
+  color: black;                         
+  border-color: var(--accent);
 }
 
 .filter-header {
@@ -515,6 +519,17 @@
 
 #filtersButton.open {
   border-radius: 6px 6px 0 0;
+}
+
+.clear-filters {
+  margin-top: 8px;
+  background-color: #3a1a1a;            
+  border: 1px solid #ff4d4f;             
+  color: #ff4d4f;                         
+  border-radius: 4px;
+  padding: 6px 10px;
+  cursor: pointer;
+  transition: background 0.2s;
 }
 
 #filtersOptions {
