--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -768,8 +768,8 @@
 
     <div class="filter-columns">
       <div class="filter-header">Workshop Category</div>
-      <button data-filter="camp">C.A.M.P. Pieces</button>
-      <button data-filter="decor">Decorations</button>
+      <button data-filter=">C.A.M.P. Pieces">C.A.M.P. Pieces</button>
+      <button data-filter="Decorations">Decorations</button>
       <button data-filter="defense">Defense</button>
       <button data-filter="dwellers">Dwellers</button>
       <button data-filter="furniture">Furniture</button>
